team, list - fix gap

--- a/css/styles.css
+++ b/css/styles.css
@@ -243,7 +243,7 @@ img {
   color: #2e2f42;
 }
 .team-list {
-  /* background-color: #ffffff; */
+  gap: 24px;
 }
 .team-item {
   --items: 4;
@@ -254,12 +254,11 @@ img {
     0 1px 6px 0 rgba(46, 47, 66, 0.08);
   background-color: #ffffff;
 }
+.team-item:last-child {
+  margin-right: 0;
+}
 .team-item-member {
   padding: 32px 0;
-  gap: 24px;
-}
-.team-item-member:last-child {
-  margin-right: 0;
 }
 .team-item-title {
   margin-bottom: 8px;
